k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tools
  labels:
    name: tools
    managed-by: digamber
    purpose: internal-tools
