k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-portal-svc
  namespace: tools
  labels:
    app: upload-portal
spec:
  selector:
    app: upload-portal
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
